--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "first_hosted_website",
-  "homepage": "https://dohosmate.github.io/firsthostedwebsite",
+  "homepage": "https://foldieden.hu",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
